--- a/views/homepages/index-voting-period.ejs
+++ b/views/homepages/index-voting-period.ejs
@@ -49,7 +49,7 @@
           <span><h1 class="montserrat h1" id="countdown">00 00 00 00</h1></span><br />
           <br />
           <!-- Vote button (only visible during voting period) -->
-          <button id="vote-button" class="button-rounded-yellow">LOG IN TO VOTE</button>
+          <button id="vote-button" class="button-rounded-yellow" onclick="window.location.href='/vote'">LOG IN TO VOTE</button>
         </div>
 
         <div class="content-main-right">
