--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -40,17 +40,21 @@
   flex-direction: row;
   max-height: var(--height-main-first);
   width: 70%;
+  justify-content: center;
+  margin-top: 1.57%;
 }
 
-.logo {
+.main-first-logo {
   height: 5em;
   width: auto;
+  opacity: 0.6;
 }
 
 .first-text {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   padding: 0% 5%;
+  line-height: 2.5rem;
 }
 
 .main-second {
@@ -59,6 +63,8 @@
   flex-basis: var(--height-main-second);
   min-width: 90%;
   flex-grow: 1;
+  padding-top: 5%;
+  /* border: 1px solid black; */
 }
 
 .second-left {
@@ -66,19 +72,23 @@
   flex-direction: column;
   flex-basis: var(--width-second-left);
   background: linear-gradient(to bottom, var(--color-mediumYellow), var(--color-lightYellow));
-  border: 5px solid var(--color-mediumRed);
-  border-radius: 5%;
+  border-radius: 1.5rem;
   padding: 2%;
   margin-top: 2%;
   margin-left: 4%;
   margin-bottom: 5%;
-  width: 30vw;
-  height: 75vh;
+
+  height: 71vh;
 }
 
-.second-left textarea {
-  width: 80%;
-  height: 70%;
+.message {
+  width: 70%;
+  height: 60%;
+  overflow-y: auto;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
+  background-color: #fff3c8;
+  border: 0.2rem solid #6e1311;
 }
 
 .second-right {
@@ -88,4 +98,86 @@
   padding: 3%;
   margin-left: 2%;
   margin-top: 1%;
+}
+
+#contact {
+  color: var(--color-darkYellow);
+}
+
+#light {
+  color: var(--color-mediumYellow);
+}
+
+.button {
+  background-color: #6e1311;
+  border-radius: 0.5rem;
+  width: auto;
+  padding: 3% 4%;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  line-height: normal; /* Helps with centering */
+  height: auto; /* Ensure no forced height issues */
+}
+
+form {
+  color: black;
+  position: relative;
+}
+
+form h1 {
+  color: #6e1311;
+}
+
+form input {
+  border: none;
+  border-bottom: 0.2rem solid #6e1311;
+  outline: none;
+  width: 70%;
+  background-color: transparent;
+  padding-left: 2rem;
+  height: 2.3em;
+  /* padding-bottom: 0.5rem; */
+}
+
+form input:focus {
+  background-color: transparent;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #000000;
+
+  transition: background-color 5000s ease-in-out 0s !important;
+  box-shadow: inset 0 0 20px 20px transparent;
+}
+
+.form-button {
+  gap: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  /* margin-top: 1rem; */
+}
+
+.yellow {
+  color: var(--color-darkYellow);
+  font-weight: bold;
+}
+
+.light-yellow {
+  color: var(--color-mediumYellow);
+}
+
+.icon {
+  font-size: 1.5em;
+  /* border: 1px solid; */
+
+  position: absolute;
+  color: var(--color-mediumRed);
+  margin-bottom: 1em;
 }
