--- a/views/homepages/index-election-not-active.ejs
+++ b/views/homepages/index-election-not-active.ejs
@@ -18,9 +18,9 @@
       </div>
       <nav class="header-nav">
         <ul class="header-nav-content">
-          <li><a href="index_voting_period.html" id="active-link">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/" id="active-link">Home</a></li>
+          <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
         </ul>
       </nav>
       <div class="header-bottom-line"></div>
